tests/ui/trait-bounds/trait-bound-adt-issue-145611.stderr
error[E0277]: the trait bound `SomeType: LocalTrait` is not satisfied
  --> $DIR/trait-bound-adt-issue-145611.rs:8:19
   |
LL |     impls_trait::<SomeType>();
   |                   ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `LocalTrait` is not implemented for `SomeType`
  --> $DIR/trait-bound-adt-issue-145611.rs:5:1
   |
LL | struct SomeType;
   | ^^^^^^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/trait-bound-adt-issue-145611.rs:4:1
   |
LL | trait LocalTrait {}
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `impls_trait`
  --> $DIR/trait-bound-adt-issue-145611.rs:6:19
   |
LL | fn impls_trait<T: LocalTrait>() {}
   |                   ^^^^^^^^^^ required by this bound in `impls_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
